src/test/scala/wacc/wacc_examples/invalid/syntaxErr/while/control_flow/breakTypo.wacc
# simple break typo in while loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int x = 0 ;
  while true do
    if x == 5
    then brea
    else x = x + 1
    fi
  done ;
  exit x 
end
